--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-<h1>Hey~</h1>
-=======
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,5 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button onclick="kill()">Do it</button>
+  <!-- <h1>Hi! Welcome to Right to Dinner.</h1> -->
 </body>
->>>>>>> 5459d11 (Added an action plan document and updated the HTML document.)
+</html>
